# yaoya

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
src/: filters.rs  handlers.rs  main.rs  model.rs  negicloud.rs  slack.rs  token.rs
src/filters/: verify.rs
src/handlers/: handle_interactivity.rs  handle_slash_commands.rs  verify_email.rs
src/handlers/handle_interactivity/: model.rs
src/handlers/handle_slash_commands/: signup.rs
src/model/: config.rs  department.rs  email.rs  passphrase.rs  username.rs
src/model/passphrase/: words.rs
src/slack/: get_profile.rs  model.rs  post_message.rs
src/slack/model/: command_input.rs  error.rs  message.rs  profile.rs
