[package]
name = "yaoya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1"
email_address = "0.2.3"
rand = "0.8.5"
anyhow = "1.0.62"
envy = "0.3.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version="1.0.87", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
reqwest = { version = "0.11", features = ["json","multipart"] }
chrono = "0.4.22"
bytes = "1.2.1"
hmac-sha256 = "1.1.4"
hex = "0.4.3"
serde_urlencoded = "0.7.1"
sendgrid = "0.18.0"
